--- a/app.css
+++ b/app.css
@@ -13,6 +13,9 @@ html {
 #content {
   text-align: center;
   padding-top: 25%;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+               0px 8px 13px rgba(0,0,0,0.2),
+               0px 18px 23px rgba(0,0,0,0.1);
 }
 
 h1 {
